--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Open+Sans:ital,wght@0,300;0,500;0,600;0,700;1,300;1,400;1,500&family=Public+Sans:wght@300&display=swap');
+body {
+  background-color: #5265c4 !important;
+}
+
 .App {
-  text-align: center;
+  background-color: #5265c4;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.mainPage {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+
+.intro {
+  background-color: #EFF6FF;
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  padding-top: 2em;
+  padding-bottom: 2em;
+  margin-top: 0em;
+}
+
+
+.intro img {
+  width: 25%;
+  height: auto;
+}
+
+.intro p {
+  font-family: 'Libre Baskerville', serif;
+  font-size: 2.5vw;
+}
+
+.btn {
+  border: 2px solid black;
+  font-family: 'Public Sans', sans-serif;
+  background-color: #EFF6FF;
+  color: black;
+  padding: 14px 28px;
+  font-size: 16px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #5265c4;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+a:-webkit-any-link { 
+  text-decoration: none;
+  color: white; 
+ }
+
+ .projects {
+  color: white;
+ }
+
+ .projects h2{
+  text-align: center;
+  font-size: 1.5vem;
+ }
+
+ .grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+ }
+
+ .Item {
+  background-color: #EFF6FF;
+  color: black;
+  padding: 20px;
+  height: auto;
+  width: 30%;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  border-radius: 5px;
+ }
+
+ .Item img{
+  width: 100%;
+ }
+
+ .btn-sm {
+  border: 1px solid black;
+  font-family: 'Public Sans', sans-serif;
+  background-color: #EFF6FF;
+  color: black;
+  padding: 7px 14px;
+  font-size: 12px;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-sm:hover {
+  background-color: #5265c4;
+  color: white;
 }
