--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -46,6 +46,11 @@
     display: none;
   }
   
+  .nav-logo a:-webkit-any-link { 
+    text-decoration: none;
+    color: white;
+   }
+
   @media (max-width: 700px) {
     .Navbar > .nav-items {
       position: absolute;
