--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@ body {
   flex-direction: column;
 }
 
+.description p {
+  text-align: center;
+}
 
 .intro {
   background-color: #EFF6FF;
@@ -81,13 +84,22 @@ a:-webkit-any-link {
   margin: 10px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
   border-radius: 5px;
+ }
+
+ .description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ }
+
+ .description h4 {
+  margin-bottom: 0;
  }
 
  .Item img{
   width: 100%;
+  height: 60%;
  }
 
  .btn-sm {
@@ -160,8 +172,10 @@ a:-webkit-any-link {
   justify-content: start;
 }
 
-.about-item p{
+.about-item a{
   margin-left: 10px;
+  color: #5265c4;
+  font-size: 1.2vw;
 }
 
 .personas-photos {
@@ -171,10 +185,22 @@ a:-webkit-any-link {
   width: 40%;
 }
 
+.dev-photos {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+}
+
+.dev-photos img {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  width: 80%;
+}
+
 .personas-photos img {
   margin-bottom: 20px;
   margin-top: 20px;
-  width: 60%;
 }
 
 .iterative-photos {
