--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,42 +1,53 @@
 /* CSS styling and to allow for responsiveness from: https://github.com/DevLHB/navbar-app */
 .Navbar {
-    height: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #5265c4;
-  }
-  
-  .Navbar > .nav-logo {
-    font-weight: 700;
-    font-size: 21px;
-    margin: 15px;
-    color: #ffffff;
-  }
-  
-  .Navbar > .nav-items {
-    display: flex;
-    flex-direction: row;
-  }
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #5265c4;
+}
 
-  .Navbar > .nav-items > .text > a{
-    color: #ffffff;
-    font-size: 16px;
-    text-decoration: none;
-    margin: 25px;
-    position: relative;
-  }
-  
-  .Navbar > .nav-items > .active > a {
-    color: white;
-    text-decoration: underline;
-  }
-  
-  .Navbar > .nav-toggle {
-    display: none;
-  }
-  
-  .nav-logo a:-webkit-any-link { 
-    text-decoration: none;
-    color: white;
-   }
+.Navbar > .nav-logo {
+  font-weight: 700;
+  font-size: 21px;
+  margin: 15px;
+  color: #ffffff;
+}
+
+.Navbar > .nav-items > a {
+  color: #ffffff;
+  font-size: 16px;
+  text-decoration: none;
+  margin: 25px;
+  position: relative;
+  opacity: 0.9;
+}
+
+.Navbar > .nav-items > a:hover {
+  opacity: 1;
+}
+
+.Navbar > .nav-items > a::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  background: #ffffff;
+  transition: all 0.45s;
+}
+
+.Navbar > .nav-items > a:hover::before {
+  width: 100%;
+}
+
+.Navbar > .nav-toggle {
+  display: none;
+}
+
+.nav-logo a:-webkit-any-link { 
+  text-decoration: none;
+  color: white;
+ }
+
